// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ci-tools CLI contract baselines (status/signal invariant, prose owner-rebaselinable) > invalid deploy mode 1`] = `
{
  "signal": null,
  "status": 1,
  "stderr": "
ERROR
  Invalid value for flag --mode: "nope". Expected: "prod" | "pr" | "draft"
",
  "stdout": "DESCRIPTION
  Deploy a local static directory to Netlify

USAGE
  ci-tools deploy netlify [flags]

FLAGS
  --target string                         Stable deploy target name
  --artifact-dir string                   Local static directory to deploy
  --mode choice                           Netlify deploy mode (choices: prod, pr, draft)
  --display-name string                   Human-readable deploy target label
  --pr integer                            Pull request number for PR deploy mode
  --site-name string                      Netlify site slug used for final alias URLs
  --site-id-env string                    Environment variable containing the Netlify site id
  --auth-token-env string                 Environment variable containing the Netlify auth token
  --account-slug-env string               Optional environment variable containing the Netlify account slug
  --workspace-filter string               Optional Netlify monorepo workspace filter passed to the CLI
  --workflow-report-output-file string    Optional JSONL file that receives marked workflow-report records
  --github-output-file string             Optional GitHub Actions output file that receives deploy outputs
  --github-env-file string                Optional GitHub Actions env file that receives deploy env vars
  --url-env-key string                    Optional env var name for the final deploy URL
  --netlify-bin string                    Netlify CLI binary path
  --netlify-api-base-url string           Netlify API base URL
  --missing-auth-policy choice            Whether missing Netlify auth fails or emits a skipped record (choices: fail, skip)
  --unauthorized-policy choice            Whether unauthorized Netlify credentials fail or emit a skipped record (choices: fail, skip)
  --created-at-utc string                 Override record creation timestamp for deterministic tests
  --e2e-allow-shared-project              Enable shared-project live E2E alias guardrails
  --e2e-reserved-alias-prefix string      Required alias prefix when shared-project E2E is enabled
  --e2e-verify-path string                Optional live E2E path to fetch after deploy
  --e2e-verify-text string                Optional live E2E marker text expected at the verify path

GLOBAL FLAGS
  --help, -h                                                          Show help information
  --version, -v                                                       Show version information
  --wizard                                                            Start wizard mode for a command
  --completions <bash|zsh|fish|sh>                                    Print shell completion script (choices: bash, zsh, fish, sh)
  --log-level <all|trace|debug|info|warn|warning|error|fatal|none>    Sets the minimum log level (choices: all, trace, debug, info, warn, warning, error, fatal, none)
",
}
`;

exports[`ci-tools CLI contract baselines (status/signal invariant, prose owner-rebaselinable) > missing required bundle id 1`] = `
{
  "signal": null,
  "status": 1,
  "stderr": "
ERROR
  Missing required flag: --bundle-id
",
  "stdout": "DESCRIPTION
  Collect marked workflow report records into a bundle

USAGE
  ci-tools workflow-report collect-bundle [flags]

FLAGS
  --bundle-id string           Workflow report bundle identifier
  --input-paths-json string    JSON array of marked JSONL input file paths
  --output-path string         Path that receives the encoded bundle JSON
  --record-marker string       Line marker prefix for workflow report records
  --allow-missing-input        Ignore missing input files

GLOBAL FLAGS
  --help, -h                                                          Show help information
  --version, -v                                                       Show version information
  --wizard                                                            Start wizard mode for a command
  --completions <bash|zsh|fish|sh>                                    Print shell completion script (choices: bash, zsh, fish, sh)
  --log-level <all|trace|debug|info|warn|warning|error|fatal|none>    Sets the minimum log level (choices: all, trace, debug, info, warn, warning, error, fatal, none)
",
}
`;

exports[`ci-tools CLI contract baselines (status/signal invariant, prose owner-rebaselinable) > root help 1`] = `
{
  "signal": null,
  "status": 0,
  "stderr": "",
  "stdout": "DESCRIPTION
  CI automation helpers

USAGE
  ci-tools <subcommand> [flags]

GLOBAL FLAGS
  --help, -h                                                          Show help information
  --version, -v                                                       Show version information
  --wizard                                                            Start wizard mode for a command
  --completions <bash|zsh|fish|sh>                                    Print shell completion script (choices: bash, zsh, fish, sh)
  --log-level <all|trace|debug|info|warn|warning|error|fatal|none>    Sets the minimum log level (choices: all, trace, debug, info, warn, warning, error, fatal, none)

SUBCOMMANDS
  workflow-report    Workflow report bundle, render, and comment-state helpers
  deploy             Deploy preview provider operations
  quarantine         Quarantine ledger validation and tolerated-failure announcements
",
}
`;

exports[`ci-tools CLI contract baselines (status/signal invariant, prose owner-rebaselinable) > version 1`] = `
{
  "signal": null,
  "status": 0,
  "stderr": "",
  "stdout": "ci-tools v0.1.0
",
}
`;

exports[`ci-tools CLI contract baselines (status/signal invariant, prose owner-rebaselinable) > workflow-report help 1`] = `
{
  "signal": null,
  "status": 0,
  "stderr": "",
  "stdout": "DESCRIPTION
  Workflow report bundle, render, and comment-state helpers

USAGE
  ci-tools workflow-report <subcommand> [flags]

GLOBAL FLAGS
  --help, -h                                                          Show help information
  --version, -v                                                       Show version information
  --wizard                                                            Start wizard mode for a command
  --completions <bash|zsh|fish|sh>                                    Print shell completion script (choices: bash, zsh, fish, sh)
  --log-level <all|trace|debug|info|warn|warning|error|fatal|none>    Sets the minimum log level (choices: all, trace, debug, info, warn, warning, error, fatal, none)

SUBCOMMANDS
  collect-bundle      Collect marked workflow report records into a bundle
  render-comment-body Render a managed workflow report comment body
  find-comment        Find the existing managed workflow report comment
",
}
`;
